[tool.poetry]
name = "vss365today-archiver"
version = "0.1.0"
description = "Static file generator and archiver for #vss365 today"
authors = ["Caleb <le717@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.1"
jinja2 = "^3.1.2"
sys-vars = "^5.0.0"
markupsafe = "^2.1.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 4
line-length = 100

[tool.ruff.format]
preview = true
line-ending = "native"
indent-style = "space"
quote-style = "double"

[tool.ruff.lint.isort]
lines-after-imports = 2
extra-standard-library = ["zoneinfo"]
